<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">TipCalculator</string>
    <string name="bill_total">Bill Total</string>
    <string name="tip">Tip</string>
    <string name="total">Total</string>
    <string name="round_total">Round Total</string>
    <string name="zero">0.00</string>
    <string name="round_zero">0</string>
    <string name="custom">Custom</string>
    <string name="noOfPeople">No of People</string>
    <string name="perPerson">Per Person</string>
    <string name="custom_amount">Custom Amount</string>
    <string name="tip_percentage">Tip %</string>



    <string name="shareApp">Share</string>
    <string name="rateApp">Rate App</string>
</resources>
