<TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android"
        android:longClickable="true" android:id="@+id/tableLayout" android:padding="5dp" android:stretchColumns="1,2,3">
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow0">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_total"
                android:layout_column="0" android:id="@+id/billTextView"
                android:paddingRight="5dp" android:gravity="right" android:password="false"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1" android:id="@+id/billEditText" android:clickable="true"
                android:inputType="numberDecimal"
                android:layout_span="2"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow1">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10%"
                android:id="@+id/tenTextView"
                android:layout_column="1" android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15%"
                android:id="@+id/fifteenTextView" android:gravity="center"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="20%"
                android:id="@+id/twentyTextView" android:gravity="center"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow2">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:id="@+id/tipPercentTextView" android:gravity="right" android:paddingRight="5dp"
                android:password="false" android:paddingTop="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip10EditText" android:autoText="false" android:text="@string/zero"
                android:gravity="center" android:textSize="14sp" android:editable="false" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip15EditText" android:autoText="false" android:text="@string/zero"
                android:gravity="center" android:textSize="14sp" android:editable="false" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tip20EditText" android:autoText="false" android:text="@string/zero"
                android:gravity="center" android:textSize="14sp" android:editable="false" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
    </TableRow>
    <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:id="@+id/tableRow3">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/totalTextView" android:gravity="right" android:paddingRight="5dp"
                android:password="false" android:paddingTop="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total10EditText" android:gravity="center" android:textSize="14sp"
                android:editable="false" android:text="@string/zero" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total15EditText" android:gravity="center" android:textSize="14sp"
                android:editable="false" android:text="@string/zero" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/total20EditText" android:gravity="center" android:textSize="14sp"
                android:editable="false" android:text="@string/zero" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow4">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_total"
                android:id="@+id/totalRoundedTextView" android:gravity="right" android:paddingRight="5dp"
                android:password="false" android:paddingTop="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalRounded10EditText" android:gravity="center" android:textSize="14sp"
                android:editable="false" android:text="@string/round_zero" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalRounded15EditText" android:gravity="center" android:textSize="14sp"
                android:editable="false" android:text="@string/round_zero" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/totalRounded20EditText" android:gravity="center" android:textSize="14sp"
                android:editable="false" android:text="@string/round_zero" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow5" android:paddingTop="5dp"
            android:paddingBottom="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom"
                android:id="@+id/customTextView" android:gravity="right" android:paddingRight="5dp"/>
        <SeekBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar" android:layout_span="2" android:paddingTop="5dp" android:paddingBottom="5dp"
                android:progress="18"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customTipTextView" android:text="18%" android:paddingTop="5dp"
                android:paddingBottom="5dp"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow6" android:paddingTop="5dp"
            android:paddingBottom="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip"
                android:id="@+id/finalTipTextView" android:gravity="right" android:paddingRight="5dp"
                android:password="false"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finalTipEditText" android:textSize="14sp" android:gravity="center"
                android:paddingTop="5dp" android:paddingBottom="5dp" android:editable="false"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:id="@+id/finalTotalTextView" android:paddingRight="5dp" android:gravity="right"
                android:password="false" android:paddingTop="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finalTotalEditText" android:textSize="14sp" android:gravity="center"
                android:paddingTop="5dp" android:paddingBottom="5dp" android:editable="false"/>
    </TableRow>
    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow7" android:paddingTop="5dp"
            android:paddingBottom="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/round_total" android:layout_column="2"
                android:id="@+id/finalRoundTotalTextView" android:paddingRight="5dp" android:gravity="right"
                android:password="false" android:paddingTop="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/finalRoundTotalEditText" android:textSize="14sp" android:gravity="center"
                android:paddingTop="5dp" android:paddingBottom="5dp" android:editable="false"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow8" android:paddingTop="5dp"
            android:paddingBottom="5dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/noOfPeople"
                android:id="@+id/noOfPeopleTextView" android:gravity="right" android:paddingRight="5dp"
                android:password="false"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/noOfPeopleEditText" android:textSize="14sp" android:gravity="center"
                android:paddingTop="5dp" android:paddingBottom="5dp" android:inputType="number"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perPerson"
                android:id="@+id/perPersonTextView" android:paddingRight="5dp" android:gravity="right"
                android:password="false" android:paddingTop="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/perPersonEditText" android:textSize="14sp" android:gravity="center"
                android:paddingTop="5dp" android:paddingBottom="5dp" android:editable="false"/>
    </TableRow>

    <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" android:id="@+id/tableRow9">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_amount"
                android:id="@+id/customAmountTextView" android:gravity="center|right" android:paddingTop="5dp"
                android:paddingRight="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customAmountEditText" android:inputType="numberDecimal" android:textSize="14sp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_percentage"
                android:id="@+id/customTipPercentTextView" android:gravity="center|right" android:paddingTop="5dp"
                android:paddingRight="5dp" android:paddingBottom="5dp"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/customTipPercentEditText" android:editable="false"
                android:textSize="14sp"/>
    </TableRow>
</TableLayout>